# map-analyzer

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md  checklist.csv  crawler.py  eda.ipynb  eda.py  extract_coordinates.py  hanoi.ipynb  hoan_kiem.geojson  hoan_kiem.parquet  long_bien.geojson  long_bien.parquet  main.py  note.md  note.txt  out.parquet  population.py  preprocess.ipynb  pyproject.toml  requirements.txt  state.json  test.py  utils.py  viz.py
.virtual_documents/: Untitled.ipynb  eda.ipynb
datasets/: arounds.csv  atms.csv
datasets/population/: .~lock.V02.01.xlsx#  V02.01.csv
datasets/raw/: arounds_atm.parquet  schools_around_atm.parquet
datasets/results/: arounds.csv  atms.csv  poi_with_coordinates.parquet
eda/: eda.ipynb  hanoi.ipynb
engines/google_api/: google_api.py  places_api.py
engines/gosom_scraper/: crawler.py  input_1740470585.66369.txt  input_1740476478.627288.txt  input_1740478286.384018.txt  input_1741081529.086963.txt  input_1741087701.008555.txt  process.py
engines/omkarcloud_scraper/: crawler.py
mylib/: Makefile  __init__.py  extract_coordinates.py  geo_map.json  population.py  post_process.py  utils.py  viz.py
queries/: arounds.txt  atm.txt  bac_lieu.geojson  ben_tre.geojson  binh_dinh.geojson  binh_duong.geojson  binh_thuan.geojson  ca_mau.geojson  cao_bang.geojson  da_nang.geojson  dien_bien.geojson  dong_nai.geojson  dong_thap.geojson  ha_giang.geojson  ha_tinh.geojson  hai_phong.geojson  hanoi_city.geojson  hcm.geojson  hoa_binh.geojson  hue.geojson  hung_yen.geojson  khanh_hoa.geojson  kien_giang.geojson  lai_chau.geojson  lam_dong.geojson  lang_son.geojson  lao_cai.geojson  nam_dinh.geojson  nghe_an.geojson  ninh_thuan.geojson  phu_tho.geojson  phu_yen.geojson  quang_binh.geojson  quang_nam.geojson  quang_ngai.geojson  quang_ninh.geojson  quang_tri.geojson  soc_trang.geojson  tay_nguyen.geojson  tay_ninh.geojson  (+7 more)
queries/HN/: long_bien1.geojson
(+36 files in other folders)
