[project]
name = "map-analyzer"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "altair>=5.5.0",
    "fastexcel>=0.13.0",
    "folium>=0.19.2",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "ipython>=8.30.0",
    "jinja2>=3.1.5",
    "jupyterlab>=4.3.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "playwright>=1.56.0",
    "polars>=1.17.1",
    "pyarrow>=19.0.1",
    "pydub>=0.25.1",
    "rasterio>=1.4.3",
    "speechrecognition>=3.14.4",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.0",
]
